--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/spinner": "^0.1.15",
     "@gluestack-ui/toast": "^1.0.9",
+    "@react-navigation/native": "^7.1.5",
+    "@react-navigation/native-stack": "^7.3.9",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.43",
+    "expo-asset": "~11.0.5",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
     "nativewind": "^4.1.23",
@@ -30,6 +33,7 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
     "tailwindcss": "^3.4.17"
   },
