--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/spinner": "^0.1.15",
     "@gluestack-ui/toast": "^1.0.9",
+    "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
     "babel-plugin-module-resolver": "^5.0.2",
