--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-asset": "~11.0.5",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.487.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
