--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/spinner": "^0.1.15",
     "@gluestack-ui/toast": "^1.0.9",
-    "@react-navigation/bottom-tabs": "^7.3.9",
-    "@react-navigation/native": "^7.1.5",
-    "@react-navigation/native-stack": "^7.3.9",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.43",
-    "expo-asset": "~11.0.5",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.487.0",
@@ -33,10 +32,10 @@
     "react-dom": "^18.3.1",
     "react-native": "0.76.9",
     "react-native-css-interop": "^0.1.22",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "^15.2.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
