Enhance app configuration and component structure; add expo-image-picker plugin for photo sharing, update import paths for consistency, and refactor various components to utilize new UI elements. Introduce new components such as GoBackButton and ToastMessage, and implement UI improvements across screens for better user experience.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,16 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": ["./*"],
+      "@dtos/*": ["./dtos/*"],
+      "@assets/*": ["./assets/*"],
+      "@components/*": ["./components/*"],
+      "@screens/*": ["./screens/*"],
+      "@storage/*": ["./storage/*"],
+      "@utils/*": ["./utils/*"],
+      "@services/*": ["./services/*"],
+      "@hooks/*": ["./hooks/*"],
+      "@contexts/*": ["./contexts/*"],
+      "@routes/*": ["./routes/*"],
       "tailwind.config": ["./tailwind.config.js"]
     }
   }
