--- a/package.json
+++ b/package.json
@@ -9,40 +9,71 @@
     "web": "DARK_MODE=media expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/roboto": "^0.3.0",
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/html-elements": "^0.4.2",
+    "@gluestack-ui/accordion": "^1.0.14",
+    "@gluestack-ui/actionsheet": "^0.2.52",
+    "@gluestack-ui/alert": "^0.1.16",
+    "@gluestack-ui/alert-dialog": "^0.1.38",
+    "@gluestack-ui/avatar": "^0.1.18",
     "@gluestack-ui/button": "^1.0.14",
-    "@gluestack-ui/icon": "^0.1.27",
+    "@gluestack-ui/checkbox": "^0.1.39",
+    "@gluestack-ui/divider": "^0.1.10",
+    "@gluestack-ui/fab": "^0.1.28",
+    "@gluestack-ui/form-control": "^0.1.19",
+    "@gluestack-ui/icon": "^0.1.26",
     "@gluestack-ui/image": "^0.1.17",
     "@gluestack-ui/input": "^0.1.38",
+    "@gluestack-ui/link": "^0.1.29",
+    "@gluestack-ui/menu": "^0.2.43",
+    "@gluestack-ui/modal": "^0.1.41",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
+    "@gluestack-ui/popover": "^0.1.49",
+    "@gluestack-ui/pressable": "^0.1.23",
+    "@gluestack-ui/progress": "^0.1.18",
+    "@gluestack-ui/radio": "^0.1.40",
+    "@gluestack-ui/select": "^0.1.31",
+    "@gluestack-ui/slider": "^0.1.32",
     "@gluestack-ui/spinner": "^0.1.15",
+    "@gluestack-ui/switch": "^0.1.29",
+    "@gluestack-ui/textarea": "^0.1.24",
     "@gluestack-ui/toast": "^1.0.9",
+    "@gluestack-ui/tooltip": "^0.1.44",
+    "@hookform/resolvers": "^4.1.3",
+    "@legendapp/motion": "^2.4.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
+    "@rocketseat/eslint-config": "^2.2.2",
+    "axios": "^1.8.4",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~52.0.43",
+    "expo": "~52.0.38",
+    "expo-file-system": "~18.0.11",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
-    "lucide-react-native": "^0.487.0",
+    "lucide-react-native": "^0.482.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.76.9",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.2.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@react-native/babel-preset": "^0.78.2",
     "@types/react": "~18.3.12",
     "jscodeshift": "^0.15.2",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3"
   },
