--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55.0",
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
     "react-native-reanimated": "^3.17.1",
@@ -66,7 +66,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.2.0",
     "tailwindcss": "^3.4.17",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
